# tiny-renderer

./: CMakeLists.txt  geometry.h  main.cpp  model.cpp  model.h  tgaimage.cpp  tgaimage.h
